name:                minesweeper
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/jgertm/minesweeper#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Jäger
maintainer:          jger.tm@gmail.com
copyright:           2017 Tim Jäger
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , chunked-data
  default-language:    Haskell2010

executable minesweeper-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , minesweeper
  default-language:    Haskell2010

test-suite minesweeper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , minesweeper
                     , tasty
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jgertm/minesweeper
